remove LimitOption and ImmutableLimitOption; remove use of limit option in search; minor code adjustments;
Signed-off-by: Stefan <stefan.maute@bosch.io>
Signed-off-by: Stefan Maute <stefan.maute@bosch.io>